Add New Thens: Extract, Generate, Transform. Add generator variable tag. Support quoted values in variable tags. Add custom pseudo selector ::innerHTML to HTML value path/CSS Selector support. Misc. small UI improvements for performance and usability. Add settings option to hide features.