@@ -8,14 +8,15 @@ import java.util.stream.Collectors;
 
 @EqualsAndHashCode
 public class ContentType {
-    public static final ContentType None = new ContentType("None", 0, 1);
-    public static final ContentType UrlEncoded = new ContentType("URL Encoded", 1, 2);
-    public static final ContentType MultiPart = new ContentType("Multi-Part", 2, 4);
-    public static final ContentType Xml = new ContentType("XML", 3, 8);
-    public static final ContentType Json = new ContentType("JSON", 4, 16);
-    public static final ContentType Amf = new ContentType("AMF", 5, 32);
-    public static final ContentType Unknown = new ContentType("Unknown", -1, 64);
+    public static final ContentType None = new ContentType("None", 1);
+    public static final ContentType UrlEncoded = new ContentType("URL Encoded", 2);
+    public static final ContentType MultiPart = new ContentType("Multi-Part", 4);
+    public static final ContentType Xml = new ContentType("XML", 8);
+    public static final ContentType Json = new ContentType("JSON", 16);
+    public static final ContentType Amf = new ContentType("AMF", 32);
+    public static final ContentType Unknown = new ContentType("Unknown", 64);
 
+    @Getter
     private static final List<ContentType> values = List.of(
             None,
             UrlEncoded,
@@ -28,35 +29,28 @@ public class ContentType {
 
     @Getter
     private final String[] names;
-    private final int[] ids;
     private final int flags;
 
     private ContentType() {
-        this(None.names[0], None.ids[0], None.flags);
+        this(None.names[0], None.flags);
     }
 
-    private ContentType(String name, int id, int flags) {
+    private ContentType(String name, int flags) {
         this.names = new String[] { name };
-        this.ids = new int[] { id };
         this.flags = flags;
     }
 
     private ContentType(int flags) {
         List<ContentType> contentTypes = getValues().stream()
                 .filter(contentType -> contentType.hasFlags(flags))
-                .collect(Collectors.toList());
+                .toList();
         this.names = contentTypes.stream()
                 .map(ContentType::getName).toArray(String[]::new);
-        this.ids = contentTypes.stream().mapToInt(ContentType::getId).toArray();
         this.flags = flags;
     }
 
     public String getName() {
         return String.join(", ", names);
-    }
-
-    private int getId() {
-        return ids.length == 1 ? ids[0] : Unknown.getId();
     }
 
     public static ContentType get(burp.api.montoya.http.message.ContentType contentType) {
@@ -71,19 +65,8 @@ public class ContentType {
         };
     }
 
-    public static ContentType get(int id) {
-        return getValues().stream()
-                .filter(contentType -> contentType.getId() == id)
-                .findFirst()
-                .orElse(Unknown);
-    }
-
     public boolean isTextBased() {
         return flags != 0 && (flags & ~(Json.flags | UrlEncoded.flags | Xml.flags)) == 0;
-    }
-
-    public static List<ContentType> getValues() {
-        return values;
     }
 
     public boolean hasFlags(ContentType contentType) {
